--- a/app/index.html
+++ b/app/index.html
@@ -31,16 +31,20 @@
 
         <section id="home">
 
-            <article>
-                <h2>Hi, I'm Jakob</h2>
-                <p>I'm a passionated Digital Designer</p>
-                <p>and a friendly Frontend Developer</p>
+            <article id="home-hi">
+                <div>
+                    <h2>Hi, I'm Jakob</h2>
+                    <p>I'm a passionated Digital Designer</p>
+                    <p>and a friendly Frontend Developer</p>
+                </div>
             </article>
 
             <article>
-                <h2>I love exploring</h2>
-                <p>new digital trends and make them become</p>
-                <p>costumers friends</p>
+                <div>
+                    <h2>I love exploring</h2>
+                    <p>new digital trends and make them become</p>
+                    <p>costumers friends</p>
+                </div>
             </article>
             
         </section>
