First slides with animation

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,9 @@
         <![endif]-->
 
         <header>
-            <h1>EmployMe.At/DesignIt</h1>
+            <h1>employ me . at / designit</h1>
             <nav>
-                <a href="/#/">Home</a>
+                <a href="/#/" class="active">Home</a>
                 <a href="/#/about/">About</a>
                 <a href="/#/skills/">Skills</a>
                 <a href="/#/work/">Work</a>
@@ -39,7 +39,7 @@
                 </div>
             </article>
 
-            <article>
+            <article id="home-exploring">
                 <div>
                     <h2>I love exploring</h2>
                     <p>new digital trends and make them become</p>
