--- a/app/index.html
+++ b/app/index.html
@@ -18,14 +18,16 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <div id="loading-container" class="loading"></div>
+
         <header>
-            <h1>employ me . at / designit</h1>
+            <h1>employme.at / <span>designit</span></h1>
             <nav>
-                <a href="/#/" class="active">Home</a>
-                <a href="/#/about/">About</a>
-                <a href="/#/skills/">Skills</a>
-                <a href="/#/work/">Work</a>
-                <a href="/#/contact/">Contact</a>
+                <a href="/#/" class="active"><span>Home</span></a>
+                <a href="/#/about/"><span>About</span></a>
+                <a href="/#/skills/"><span>Skills</span></a>
+                <a href="/#/work/"><span>Work</span></a>
+                <a href="/#/contact/"><span>Contact</span></a>
             </nav>
         </header>
 
@@ -49,10 +51,10 @@
             
         </section>
 
-
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/jquery.js"></script>
+        <script src="scripts/vendor/fonts-com.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
