Optimized font, basic typography, scroll control, portrait image

--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,11 @@
         <section id="home">
 
             <article id="home-hi">
+                <div id="portrait-image">
+                    <div class="image"></div>
+                </div>
                 <div>
-                    <h2>Hi, I'm Jakob</h2>
+                    <h1>Hi, I'm Jakob</h1>
                     <p>I'm a passionated Digital Designer</p>
                     <p>and a friendly Frontend Developer</p>
                 </div>
@@ -43,12 +46,33 @@
 
             <article id="home-exploring">
                 <div>
-                    <h2>I love exploring</h2>
+                    <h1>I love exploring</h1>
                     <p>new digital trends and make them become</p>
                     <p>costumers friends</p>
                 </div>
             </article>
             
+        </section>
+
+        <section id="test">
+            <article>
+
+                <div>
+                    <h1>Heading 1</h1>
+                    <p>New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends</p>
+                    <h2>Heading 2</h2>
+                    <p>New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends</p>
+                    <h3>Heading 3</h3>
+                    <p>New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends</p>
+                    <p>New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends</p>
+                    <ul>
+                        <li>List</li>
+                        <li>List</li>
+                        <li>List</li>
+                    </ul>
+                    <p>New <a href="#">digital</a> trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends. New digital trends and make them become costumers friends</p>
+                </div>
+            </article>
         </section>
 
         <!-- build:js scripts/vendor.js -->
