--- a/designit/index.html
+++ b/designit/index.html
@@ -6,7 +6,7 @@
         <title>employme at</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="styles/29365fed.main.css">
+        <link rel="stylesheet" href="styles/214181fa.main.css">
         <script src="scripts/vendor/f7f27360.modernizr.js"></script>
     </head>
     <body>
@@ -30,22 +30,24 @@
         <section id="home">
 
             <article id="home-hi">
-                <div id="portrait-image">
-                    <div class="image"></div>
-                </div>
-                <div>
-                    <h1>Hi, I'm Jakob</h1>
-                    <p>I'm a passionated Digital Designer</p>
-                    <p>and a friendly Frontend Developer</p>
-                </div>
+            	<div class="floater"></div>
+                <h1>Hi, I'm Jakob</h1>
+                <p>I'm a passionated Digital Designer</p>
+                <p>and a friendly Frontend Developer</p>
             </article>
 
             <article id="home-exploring">
-                <div>
-                    <h1>I love exploring</h1>
-                    <p>new digital trends and make them become</p>
-                    <p>costumers friends</p>
-                </div>
+            	<div class="image-container">
+					<div id="image-portrait" class="lazyload"></div>
+            	</div>
+                <h1>I love exploring</h1>
+                <p>new digital trends and make them become</p>
+                <p>costumers friends</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, distinctio itaque voluptas a soluta dolore modi eaque cumque laboriosam quibusdam consequatur quisquam inventore. Dicta, necessitatibus, soluta deserunt recusandae nostrum sed. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, repellendus, illo, modi, quidem ullam asperiores sequi dolorem voluptatum accusamus laboriosam optio eius ut alias molestiae officiis enim voluptas beatae quas.</span>
+                <span>Fugit, natus similique repellat veniam eius at voluptas nisi eaque ut incidunt. Vero, tempora, voluptatum, beatae totam minus blanditiis reiciendis quae exercitationem provident cum libero laboriosam optio cumque itaque illo.</span>
+                <span>Magni natus exercitationem iusto itaque fugit labore illo necessitatibus totam obcaecati sunt. Porro, impedit, quo, est error molestiae placeat pariatur dolore odit voluptatem ducimus recusandae harum reiciendis fugiat voluptatibus culpa?</span>
+                <span>Alias, commodi suscipit aperiam rerum debitis accusamus sequi blanditiis delectus culpa laudantium impedit assumenda in fugit nisi eius necessitatibus dicta ut possimus quas temporibus? Odit, voluptatum corporis officiis soluta sed.</span>
+                <span>Ut, porro, iusto, suscipit, repellat eligendi inventore nesciunt aliquam ad nemo rem eius perspiciatis autem provident nulla cumque adipisci error illum voluptate accusamus veritatis corporis quas possimus itaque! Molestias, repudiandae?</span></p>
             </article>
             
         </section>
@@ -60,6 +62,6 @@
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
 
-        <script data-main="scripts/90e49fe2.main" src="bower_components/requirejs/require.js"></script>
+        <script data-main="scripts/67b63df5.main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
