Dont lazyload portrait image

--- a/designit/index.html
+++ b/designit/index.html
@@ -38,7 +38,7 @@
 
             <article id="home-exploring">
             	<div class="image-container">
-					<div id="image-portrait" class="lazyload"></div>
+					<div id="image-portrait"></div>
             	</div>
                 <h1>I love exploring</h1>
                 <p>new digital trends and make them become</p>
