--- a/designit/index.html
+++ b/designit/index.html
@@ -54,7 +54,7 @@
 			#home article .floater {
 				height: 50%;
 				width: 100%;
-				margin-bottom: -88px;
+				margin-bottom: -56px;
 			}
 			h1 {
 				font-size: 32px;
@@ -63,13 +63,11 @@
 			h1, h2, h3 {
 				font-weight: 700;
 			}
-			#home article h1:after {
-				display: block;
-				content: '...';
-				font-weight: 200;
-			}
 			p {
 				padding-top: 16px;
+			}
+			#home-exploring .image-container {
+				height: 200px;
 			}
 		</style>
 		<script>
@@ -144,8 +142,8 @@
         	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, laudantium, reprehenderit, cumque, repudiandae ad ipsam nemo culpa quibusdam eveniet voluptatem adipisci officiis tenetur dolores. Eius ullam architecto quo facilis magnam!</p>
         </section>
 
-        <link rel="stylesheet" href="styles/0a47159f.main.css">
+        <link rel="stylesheet" href="styles/705572c1.main.css">
 
-        <script data-main="scripts/765ee151.main" src="bower_components/requirejs/require.js"></script>
+        <script data-main="scripts/5f3b86f6.main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
