--- a/designit/index.html
+++ b/designit/index.html
@@ -10,23 +10,17 @@
 			@font-face {
 			  font-family: 'Helvetica Neue Webfont';
 			  src: url("fonts/HelveticaNeue-Light-Optimized.eot");
-			  /* IE9 Compat Modes */
 			  src: url("fonts/HelveticaNeue-Light-Optimized.eot?#iefix") format("embedded-opentype"), url("fonts/HelveticaNeue-Light-Optimized.woff") format("woff"), url("fonts/HelveticaNeue-Light-Optimized.ttf") format("truetype"), url("fonts/HelveticaNeue-Light-Optimized.svg#7384ecabcada72f0e077cd45d8e1c705") format("svg");
-			  /* Legacy iOS */
 			  font-style: normal;
 			  font-weight: 200;
 			}
-
 			@font-face {
 			  font-family: 'Helvetica Neue Webfont';
 			  src: url("fonts/HelveticaNeue-Bold-Optimized.eot");
-			  /* IE9 Compat Modes */
 			  src: url("fonts/HelveticaNeue-Bold-Optimized.eot?#iefix") format("embedded-opentype"), url("fonts/HelveticaNeue-Bold-Optimized.woff") format("woff"), url("fonts/HelveticaNeue-Bold-Optimized.ttf") format("truetype"), url("fonts/HelveticaNeue-Bold-Optimized.svg#b0b230b12ba14b2f0690df366df880c5") format("svg");
-			  /* Legacy iOS */
 			  font-style: bold;
 			  font-weight: 700;
 			}
-
 			* {
 				-moz-box-sizing: border-box;
 				box-sizing: border-box;
@@ -34,7 +28,6 @@
 				margin: 0;
 				-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 			}
-
 			body {
 				font-family: "Helvetica Neue", "Helvetica Neue Webfont", Helvetica, Arial, "Lucida Grande", sans-serif;
 				font-weight: 200;
@@ -42,7 +35,6 @@
 				color: #333333;
 				line-height: 32px;
 			}
-
 			header {
 				position: absolute;
 				top: -9999px;
@@ -70,24 +62,18 @@
 				height: 200px;
 			}
 		</style>
+		<!--[if lt IE 9]>
 		<script>
-			/*
-			 HTML5 Shiv v3.6.2 | @afarkas @jdalton @jon_neal @rem | MIT/GPL2 Licensed
-			*/
+			/* HTML5 Shiv v3.6.2 | @afarkas @jdalton @jon_neal @rem | MIT/GPL2 Licensed */
 			(function(l,f){function m(){var a=e.elements;return"string"==typeof a?a.split(" "):a}function i(a){var b=n[a[o]];b||(b={},h++,a[o]=h,n[h]=b);return b}function p(a,b,c){b||(b=f);if(g)return b.createElement(a);c||(c=i(b));b=c.cache[a]?c.cache[a].cloneNode():r.test(a)?(c.cache[a]=c.createElem(a)).cloneNode():c.createElem(a);return b.canHaveChildren&&!s.test(a)?c.frag.appendChild(b):b}function t(a,b){if(!b.cache)b.cache={},b.createElem=a.createElement,b.createFrag=a.createDocumentFragment,b.frag=b.createFrag();
 			a.createElement=function(c){return!e.shivMethods?b.createElem(c):p(c,a,b)};a.createDocumentFragment=Function("h,f","return function(){var n=f.cloneNode(),c=n.createElement;h.shivMethods&&("+m().join().replace(/\w+/g,function(a){b.createElem(a);b.frag.createElement(a);return'c("'+a+'")'})+");return n}")(e,b.frag)}function q(a){a||(a=f);var b=i(a);if(e.shivCSS&&!j&&!b.hasCSS){var c,d=a;c=d.createElement("p");d=d.getElementsByTagName("head")[0]||d.documentElement;c.innerHTML="x<style>article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}mark{background:#FF0;color:#000}</style>";
 			c=d.insertBefore(c.lastChild,d.firstChild);b.hasCSS=!!c}g||t(a,b);return a}var k=l.html5||{},s=/^<|^(?:button|map|select|textarea|object|iframe|option|optgroup)$/i,r=/^(?:a|b|code|div|fieldset|h1|h2|h3|h4|h5|h6|i|label|li|ol|p|q|span|strong|style|table|tbody|td|th|tr|ul)$/i,j,o="_html5shiv",h=0,n={},g;(function(){try{var a=f.createElement("a");a.innerHTML="<xyz></xyz>";j="hidden"in a;var b;if(!(b=1==a.childNodes.length)){f.createElement("a");var c=f.createDocumentFragment();b="undefined"==typeof c.cloneNode||
 			"undefined"==typeof c.createDocumentFragment||"undefined"==typeof c.createElement}g=b}catch(d){g=j=!0}})();var e={elements:k.elements||"abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup main mark meter nav output progress section summary time video",version:"3.6.2",shivCSS:!1!==k.shivCSS,supportsUnknownElements:g,shivMethods:!1!==k.shivMethods,type:"default",shivDocument:q,createElement:p,createDocumentFragment:function(a,b){a||(a=f);if(g)return a.createDocumentFragment();
 			for(var b=b||i(a),c=b.frag.cloneNode(),d=0,e=m(),h=e.length;d<h;d++)c.createElement(e[d]);return c}};l.html5=e;q(f)})(this,document);
-
-
 		</script>
+		-->
     </head>
     <body>
-
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
         <header>
             <h1>employme.at / <span>designit</span></h1>
