--- a/test/integration/index.html
+++ b/test/integration/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Spec tests</title>
+    <title>Integration tests</title>
     <link rel="stylesheet" href="/bower_components/mocha/mocha.css">
     <script src="/bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
-	<div style="font-size:12px;padding:10px;"><a href="/integration">Include integration tests</a></div>
+	<div style="font-size:12px;padding:10px;"><a href="/">Exclude integration tests</a></div>
     <div id="mocha"></div>
 
     <!-- test framework -->
@@ -16,6 +16,7 @@
 
     <!-- tests -->
     <script src="/compiled/specs.js"></script>
+    <script src="/compiled/integrations.js"></script>
 
     <script>mocha.run()</script>
 </body>
