--- a/test/index.html
+++ b/test/index.html
@@ -1,22 +1,30 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Spec tests</title>
     <link rel="stylesheet" href="/bower_components/mocha/mocha.css">
     <script src="/bower_components/modernizr/modernizr.js"></script>
 </head>
+
 <body>
-	<div style="font-size:12px;padding:10px;"><a href="/integration">Include integration tests</a></div>
+    <div style="font-size:12px;padding:10px;"><a href="/integration">Include integration tests</a>
+    </div>
     <div id="mocha"></div>
 
     <!-- test framework -->
     <script src="/bower_components/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
+    <script>
+    mocha.setup('bdd')
+    </script>
 
     <!-- tests -->
-    <script src="/compiled/specs.js"></script>
+    <script src="/specs.js"></script>
 
-    <script>mocha.run()</script>
+    <script>
+    mocha.run()
+    </script>
 </body>
+
 </html>
